Fix extra whitespace :bug:

--- a/css/style.css
+++ b/css/style.css
@@ -100,7 +100,8 @@ body {
     /* height: 100%; */
     margin: 0px;
     padding: 0px;
-    overflow-x: hidden; 
+    overflow-x: hidden;
+    padding-bottom: 20px;
 }
 
 .central {
